// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer/routes/Filters.tsx General should render itself & its children 1`] = `
<div
  class="flex h-screen flex-col"
  data-testid="filters"
>
  <div
    class="css-18bes35"
  >
    <div
      class="css-y272c0"
    >
      <div
        role="presentation"
      >
        <button
          class="css-1t6wxle"
          data-testid="header-nav-back"
          type="button"
        >
          <span
            class="css-1spmf3f"
          >
            <span
              aria-hidden="true"
              class="css-kxjlgc"
              style="color: currentColor;"
            >
              <svg
                class="css-1t4wpzr"
                fill="none"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <path
                  d="M15 8H2.25m4.5-5-5 5 5 5"
                  stroke="currentcolor"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
            <span
              class="css-b5o75w"
            >
              Go Back
            </span>
          </span>
        </button>
      </div>
      <h3
        class="css-rex7s6"
      >
        Filters
      </h3>
    </div>
  </div>
  <div
    class="flex-grow overflow-x-auto"
  >
    <div
      class="css-1l34ghh"
    >
      <div
        class="css-srvzt9"
      >
        <div
          class="css-1ub26k9"
        >
          <div
            class="css-11u50rl"
          >
            <h4
              class="css-1skdotg"
            >
              Time Sensitive
            </h4>
            <div
              class="css-k5cxwk"
            >
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="mention"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Mention
                  </span>
                </label>
                <span
                  class="css-144dypm"
                >
                  <span
                    aria-hidden="true"
                    class="css-1dbakxj"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-u7v0tx"
                      fill="none"
                      role="presentation"
                      viewBox="-4 -4 24 24"
                    >
                      <path
                        d="M11.625 14.28A7.25 7.25 0 1 1 15.25 8c0 1.381-.932 3.107-2.59 3.107-1.656 0-1.782-1.976-1.782-3.357l.005-.125m0 0c.022-1.019-.42-1.956-1.258-2.44-1.315-.759-3.11-.114-4.007 1.44s-.558 3.43.757 4.19c1.315.759 3.11.115 4.007-1.44a3.7 3.7 0 0 0 .5-1.75Z"
                        stroke="currentcolor"
                        stroke-width="1.5"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="comment"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Comment
                  </span>
                </label>
                <span
                  class="css-144dypm"
                >
                  <span
                    aria-hidden="true"
                    class="css-1dbakxj"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-u7v0tx"
                      fill="none"
                      role="presentation"
                      viewBox="-4 -4 24 24"
                    >
                      <path
                        d="M4.25 13.25v-.75h-.2l-.172.099zm-3.5 2H0a.75.75 0 0 0 1.122.651zM2.625 2h10.75V.5H2.625zM14.5 3.125v8.25H16v-8.25zM13.375 12.5H4.25V14h9.125zm-9.497.099-3.5 2 .744 1.302 3.5-2zM1.5 15.25V3.125H0V15.25zM4 6.5h8V5H4zm0 3h5V8H4zm10.5 1.875c0 .621-.504 1.125-1.125 1.125V14A2.625 2.625 0 0 0 16 11.375zM13.375 2c.621 0 1.125.504 1.125 1.125H16A2.625 2.625 0 0 0 13.375.5zM2.625.5A2.625 2.625 0 0 0 0 3.125h1.5C1.5 2.504 2.004 2 2.625 2z"
                        fill="currentcolor"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="css-11u50rl"
          >
            <h4
              class="css-1skdotg"
            >
              Category
            </h4>
            <div
              class="css-k5cxwk"
            >
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="direct"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Direct
                  </span>
                </label>
                <span
                  class="css-144dypm"
                >
                  <span
                    aria-hidden="true"
                    class="css-1dbakxj"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-u7v0tx"
                      fill="none"
                      role="presentation"
                      viewBox="-4 -4 24 24"
                    >
                      <path
                        d="M2.75 15V9.75m0 0v-8H14l-3 4 3 4z"
                        stroke="currentcolor"
                        stroke-linejoin="round"
                        stroke-width="1.5"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="watching"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Watching
                  </span>
                </label>
                <span
                  class="css-144dypm"
                >
                  <span
                    aria-hidden="true"
                    class="css-1dbakxj"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-u7v0tx"
                      fill="none"
                      role="presentation"
                      viewBox="-4 -4 24 24"
                    >
                      <path
                        d="M8 2.75c-3.255 0-6.086 2.039-7.13 4.888a1.06 1.06 0 0 0 0 .724C1.914 11.212 4.745 13.25 8 13.25s6.086-2.039 7.129-4.888a1.06 1.06 0 0 0 0-.724c-1.043-2.85-3.874-4.888-7.13-4.888Z"
                        stroke="currentcolor"
                        stroke-linejoin="round"
                        stroke-width="1.5"
                      />
                      <path
                        d="M10.25 8a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Z"
                        stroke="currentcolor"
                        stroke-linejoin="round"
                        stroke-width="1.5"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="css-11u50rl"
          >
            <h4
              class="css-1skdotg"
            >
              Actors
            </h4>
            <div
              class="css-k5cxwk"
            >
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="user"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    User
                  </span>
                </label>
                <span
                  class="css-144dypm"
                >
                  <span
                    aria-hidden="true"
                    class="css-1dbakxj"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-u7v0tx"
                      fill="none"
                      role="presentation"
                      viewBox="-4 -4 24 24"
                    >
                      <path
                        d="M13.25 15v-2.25a3 3 0 0 0-3-3h-4.5a3 3 0 0 0-3 3V15m8.5-11a3.25 3.25 0 1 1-6.5 0 3.25 3.25 0 0 1 6.5 0Z"
                        stroke="currentcolor"
                        stroke-linejoin="round"
                        stroke-width="1.5"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="automation"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Automation
                  </span>
                </label>
                <span
                  class="css-144dypm"
                >
                  <span
                    aria-hidden="true"
                    class="css-1dbakxj"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-u7v0tx"
                      fill="none"
                      role="presentation"
                      viewBox="-4 -4 24 24"
                    >
                      <path
                        d="m6 15.25-.723-.2a.75.75 0 0 0 1.253.73zM13.25 8l.53.53a.75.75 0 0 0-.53-1.28zM10 .75l.723.2A.75.75 0 0 0 9.47.22zM2.75 8l-.53-.53a.75.75 0 0 0 .53 1.28zm3.78 7.78 7.25-7.25-1.06-1.06-7.25 7.25zm6.72-8.53H8v1.5h5.25zm-4.527.95 2-7.25-1.446-.4-2 7.25zM9.47.22 2.22 7.47l1.06 1.06 7.25-7.25zM2.75 8.75H8v-1.5H2.75zm4.527-.95-2 7.25 1.446.4 2-7.25z"
                        fill="currentcolor"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="css-11u50rl"
          >
            <h4
              class="css-1skdotg"
            >
              Read State
            </h4>
            <div
              class="css-k5cxwk"
            >
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="unread"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Unread
                  </span>
                </label>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="read"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Read
                  </span>
                </label>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1npayr"
        >
          <div
            class="css-11u50rl"
          >
            <h4
              class="css-1skdotg"
            >
              Products
            </h4>
            <div
              class="css-k5cxwk"
            >
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="bitbucket"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Bitbucket
                  </span>
                </label>
                <span
                  aria-label="Bitbucket"
                  class="css-5vjqu0"
                  role="img"
                  style="--logo-color: inherit; --logo-fill: currentColor;"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
      
                    <path
                      d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                      fill="#6C6F77"
                    />
                    
    
                  </svg>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="compass"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Compass
                  </span>
                </label>
                <span
                  aria-label="Compass"
                  class="css-5vjqu0"
                  role="img"
                  style="--logo-color: inherit; --logo-fill: currentColor;"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
      
                    <path
                      d="M15.667 15.66v5.942H9.713V15.66zV9.722H4.807c-.58.004-1.047.47-1.043 1.04v15.755a1.04 1.04 0 0 0 1.028 1.054h15.771a1.04 1.04 0 0 0 1.042-1.04V15.66zm0-11.88v5.942h5.967v5.938h5.935V4.82a1.04 1.04 0 0 0-1.028-1.053h-.014z"
                      fill="#6C6F77"
                    />
                    
      
                  </svg>
                  
    
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="confluence"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Confluence
                  </span>
                </label>
                <span
                  aria-label="Confluence"
                  class="css-5vjqu0"
                  role="img"
                  style="--logo-color: inherit; --logo-fill: currentColor;"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
      
                    <path
                      d="M25.769 20.234c-6.584-3.183-8.507-3.66-11.282-3.66-3.254 0-6.028 1.355-8.507 5.16l-.406.622c-.333.513-.407.696-.407.915s.11.403.517.659l4.18 2.598c.222.146.407.22.592.22.222 0 .37-.11.592-.44l.665-1.024c1.036-1.574 1.96-2.086 3.144-2.086 1.036 0 2.257.293 3.773 1.025l4.365 2.049c.443.22.924.11 1.146-.403l2.071-4.537c.222-.512.074-.842-.444-1.098M6.572 12.22c6.584 3.184 8.507 3.66 11.281 3.66 3.255 0 6.03-1.354 8.507-5.16l.407-.622c.333-.512.407-.695.407-.915s-.11-.402-.518-.658l-4.18-2.598c-.221-.147-.406-.22-.591-.22-.222 0-.37.11-.592.44l-.666 1.024c-1.035 1.573-1.96 2.086-3.144 2.086-1.035 0-2.256-.293-3.772-1.025L9.346 6.183c-.444-.22-.924-.11-1.146.402l-2.072 4.538c-.222.512-.074.841.444 1.098"
                      fill="#6C6F77"
                    />
                    
    
                  </svg>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="jira"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Jira
                  </span>
                </label>
                <span
                  aria-label="Jira"
                  class="css-5vjqu0"
                  role="img"
                  style="--logo-color: inherit; --logo-fill: currentColor;"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
      
                    <path
                      d="M11.034 21.99h-2.22c-3.346 0-5.747-2.05-5.747-5.052h11.932c.619 0 1.019.44 1.019 1.062v12.007c-2.983 0-4.984-2.416-4.984-5.784zm5.893-5.967h-2.219c-3.347 0-5.748-2.013-5.748-5.015h11.933c.618 0 1.055.402 1.055 1.025V24.04c-2.983 0-5.02-2.416-5.02-5.784zm5.93-5.93h-2.219c-3.347 0-5.748-2.05-5.748-5.052h11.933c.618 0 1.018.439 1.018 1.025v12.007c-2.983 0-4.984-2.416-4.984-5.784z"
                      fill="#6C6F77"
                    />
                    
    
                  </svg>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="jira product discovery"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Jira Product Discovery
                  </span>
                </label>
                <span
                  aria-label="Jira Product Discovery"
                  class="css-5vjqu0"
                  role="img"
                  style="--logo-color: inherit; --logo-fill: currentColor;"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
      
                    <path
                      d="M17.655 5.884a15.3 15.3 0 0 0 8.75 0c.257-.056.428.114.37.37-.826 2.985-.826 5.742 0 8.727.058.228-.113.427-.37.342a16.33 16.33 0 0 0-8.75 0c-.228.085-.428-.114-.342-.342.77-2.985.77-5.742 0-8.727-.086-.256.114-.426.342-.37m1.169 10.576v.483c0 2.246-1.568 3.894-3.506 3.894a3.474 3.474 0 0 1-3.477-3.496c0-1.933 1.567-3.468 3.762-3.468h.57V7.078c-.285-.028-.57-.028-.855-.028C9.618 7.05 5 11.655 5 17.37c0 5.713 4.617 10.29 10.318 10.29s10.346-4.605 10.346-10.29v-.91z"
                      fill="#6C6F77"
                    />
                    
    
                  </svg>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="jira service management"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Jira Service Management
                  </span>
                </label>
                <span
                  aria-label="Jira Service Management"
                  class="css-5vjqu0"
                  role="img"
                  style="--logo-color: inherit; --logo-fill: currentColor;"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
      
                    <path
                      d="M18.79 13.257h7.325c1.1 0 1.476 1.046.805 1.878L15.464 29.274c-3.702-2.951-3.353-7.62-.644-11.027zm-5.66 5.634H5.806c-1.1 0-1.476-1.046-.805-1.878L16.457 2.874c3.702 2.951 3.3 7.566.617 11z"
                      fill="#6C6F77"
                    />
                    
    
                  </svg>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="team central (atlas)"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Team Central (Atlas)
                  </span>
                </label>
                <span
                  aria-label="Atlas"
                  class="css-5vjqu0"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
    
                    <g
                      fill="#6C6F77"
                    >
                      
      
                      <path
                        d="M16 28.532c-6.656 0-12.068-5.412-12.068-12.068S9.344 4.396 16 4.396v1.921c-5.597 0-10.146 4.549-10.146 10.146S10.403 26.609 16 26.609zm0 0v-1.921c5.597 0 10.146-4.549 10.146-10.146h1.921c0 6.656-5.412 12.068-12.068 12.068zm12.068-12.068h-1.921c0-5.597-4.549-10.146-10.146-10.146V4.397c6.656 0 12.068 5.412 12.068 12.068zm-6.928 3.695c-1.28-.251-2.292-.706-3.973-1.467-.464-.204-.974-.436-1.559-.696a59 59 0 0 0-1.003-.436c-2.534-1.123-3.926-1.736-5.634-1.736-1.198 0-2.098.325-2.6.937a1.72 1.72 0 0 0-.38 1.448l-1.885.362a3.67 3.67 0 0 1 .78-3.035c.613-.743 1.82-1.634 4.085-1.634 2.116 0 3.824.761 6.414 1.903.316.14.641.288.994.436.594.26 1.114.492 1.578.706 1.606.724 2.488 1.123 3.555 1.327l-.371 1.885Zm1.877.185c-.64 0-1.253-.056-1.875-.185l.371-1.885c.502.102.994.149 1.504.149 1.188 0 2.089-.298 2.609-.864s.539-1.253.51-1.615l1.913-.167c.102 1.169-.251 2.265-1.003 3.082-.622.677-1.82 1.485-4.029 1.485M16 28.532v-1.921c2.757 0 4.4-2.813 4.4-7.52s-1.67-8.652-5.096-12.3l1.402-1.318c3.778 4.02 5.616 8.476 5.616 13.618 0 5.821-2.423 9.441-6.322 9.441m-.001 0c-4.15 0-6.526-3.379-6.526-9.273 0-6.879 3.008-10.722 5.82-13.776l1.412 1.299c-3.277 3.565-5.31 6.888-5.31 12.476 0 6.08 2.506 7.352 4.604 7.352z"
                      />
                      
      
                      <path
                        d="M10.857 17.467a2.247 2.247 0 1 0 0-4.494 2.247 2.247 0 0 0 0 4.494m10.385 3.871a2.247 2.247 0 1 0 0-4.494 2.247 2.247 0 0 0 0 4.494M15.998 7.96a2.247 2.247 0 1 0 0-4.493 2.247 2.247 0 0 0 0 4.494Z"
                      />
                      
    
                    </g>
                    
  
                  </svg>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="trello"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Trello
                  </span>
                </label>
                <span
                  aria-label="Trello"
                  class="css-5vjqu0"
                  role="img"
                  style="--logo-color: inherit; --logo-fill: currentColor;"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
      
                    <path
                      clip-rule="evenodd"
                      d="M24.286 5.337H7.714a2.585 2.585 0 0 0-2.585 2.585v16.572a2.585 2.585 0 0 0 2.585 2.584h16.572a2.585 2.585 0 0 0 2.585-2.584V7.922a2.585 2.585 0 0 0-2.585-2.585m-9.791 15.66a.86.86 0 0 1-.859.858h-3.634a.86.86 0 0 1-.859-.859V10.21a.86.86 0 0 1 .859-.86h3.634a.86.86 0 0 1 .859.86zm8.362-4.953a.86.86 0 0 1-.859.859h-3.634a.86.86 0 0 1-.859-.859V10.21a.86.86 0 0 1 .859-.86h3.634a.86.86 0 0 1 .859.86z"
                      fill="#6C6F77"
                      fill-rule="evenodd"
                    />
                    
    
                  </svg>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="unknown"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Unknown
                  </span>
                </label>
                <span
                  aria-label="Atlassian"
                  class="css-5vjqu0"
                  role="img"
                  style="--logo-color: inherit; --logo-fill: currentColor;"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
      
                    <path
                      d="M27.545 24.378 16.96 3.208c-.208-.458-.417-.541-.667-.541-.208 0-.458.083-.708.5-1.5 2.375-2.167 5.125-2.167 8 0 4.001 2.042 7.752 5.042 13.795.334.666.584.791 1.167.791h7.335c.541 0 .833-.208.833-.625 0-.208-.042-.333-.25-.75M12.168 14.377c-.834-1.25-1.084-1.334-1.292-1.334s-.333.083-.708.834L4.875 24.46c-.167.334-.208.459-.208.625 0 .334.291.667.916.667h7.46c.5 0 .875-.416 1.083-1.208.25-1 .334-1.876.334-2.917 0-2.917-1.292-5.751-2.292-7.251"
                      fill="#6C6F77"
                    />
                    
    
                  </svg>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="css-156yo0n"
  >
    <div
      class="css-hugz22"
    >
      <button
        class="css-18yzeap"
        data-testid="filters-clear"
        title="Clear Filters"
        type="button"
      >
        <span
          class="css-1nqby2s"
        >
          Clear Filters
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renderer/routes/Filters.tsx filters product filters should filter by product - existing filter set 1`] = `
<div
  class="flex h-screen flex-col"
  data-testid="filters"
>
  <div
    class="css-18bes35"
  >
    <div
      class="css-y272c0"
    >
      <div
        role="presentation"
      >
        <button
          class="css-1t6wxle"
          data-testid="header-nav-back"
          type="button"
        >
          <span
            class="css-1spmf3f"
          >
            <span
              aria-hidden="true"
              class="css-kxjlgc"
              style="color: currentColor;"
            >
              <svg
                class="css-1t4wpzr"
                fill="none"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <path
                  d="M15 8H2.25m4.5-5-5 5 5 5"
                  stroke="currentcolor"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
            <span
              class="css-b5o75w"
            >
              Go Back
            </span>
          </span>
        </button>
      </div>
      <h3
        class="css-rex7s6"
      >
        Filters
      </h3>
    </div>
  </div>
  <div
    class="flex-grow overflow-x-auto"
  >
    <div
      class="css-1l34ghh"
    >
      <div
        class="css-srvzt9"
      >
        <div
          class="css-1ub26k9"
        >
          <div
            class="css-11u50rl"
          >
            <h4
              class="css-1skdotg"
            >
              Time Sensitive
            </h4>
            <div
              class="css-k5cxwk"
            >
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="mention"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Mention
                  </span>
                </label>
                <span
                  class="css-144dypm"
                >
                  <span
                    aria-hidden="true"
                    class="css-1dbakxj"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-u7v0tx"
                      fill="none"
                      role="presentation"
                      viewBox="-4 -4 24 24"
                    >
                      <path
                        d="M11.625 14.28A7.25 7.25 0 1 1 15.25 8c0 1.381-.932 3.107-2.59 3.107-1.656 0-1.782-1.976-1.782-3.357l.005-.125m0 0c.022-1.019-.42-1.956-1.258-2.44-1.315-.759-3.11-.114-4.007 1.44s-.558 3.43.757 4.19c1.315.759 3.11.115 4.007-1.44a3.7 3.7 0 0 0 .5-1.75Z"
                        stroke="currentcolor"
                        stroke-width="1.5"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="comment"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Comment
                  </span>
                </label>
                <span
                  class="css-144dypm"
                >
                  <span
                    aria-hidden="true"
                    class="css-1dbakxj"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-u7v0tx"
                      fill="none"
                      role="presentation"
                      viewBox="-4 -4 24 24"
                    >
                      <path
                        d="M4.25 13.25v-.75h-.2l-.172.099zm-3.5 2H0a.75.75 0 0 0 1.122.651zM2.625 2h10.75V.5H2.625zM14.5 3.125v8.25H16v-8.25zM13.375 12.5H4.25V14h9.125zm-9.497.099-3.5 2 .744 1.302 3.5-2zM1.5 15.25V3.125H0V15.25zM4 6.5h8V5H4zm0 3h5V8H4zm10.5 1.875c0 .621-.504 1.125-1.125 1.125V14A2.625 2.625 0 0 0 16 11.375zM13.375 2c.621 0 1.125.504 1.125 1.125H16A2.625 2.625 0 0 0 13.375.5zM2.625.5A2.625 2.625 0 0 0 0 3.125h1.5C1.5 2.504 2.004 2 2.625 2z"
                        fill="currentcolor"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="css-11u50rl"
          >
            <h4
              class="css-1skdotg"
            >
              Category
            </h4>
            <div
              class="css-k5cxwk"
            >
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="direct"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Direct
                  </span>
                </label>
                <span
                  class="css-144dypm"
                >
                  <span
                    aria-hidden="true"
                    class="css-1dbakxj"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-u7v0tx"
                      fill="none"
                      role="presentation"
                      viewBox="-4 -4 24 24"
                    >
                      <path
                        d="M2.75 15V9.75m0 0v-8H14l-3 4 3 4z"
                        stroke="currentcolor"
                        stroke-linejoin="round"
                        stroke-width="1.5"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="watching"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Watching
                  </span>
                </label>
                <span
                  class="css-144dypm"
                >
                  <span
                    aria-hidden="true"
                    class="css-1dbakxj"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-u7v0tx"
                      fill="none"
                      role="presentation"
                      viewBox="-4 -4 24 24"
                    >
                      <path
                        d="M8 2.75c-3.255 0-6.086 2.039-7.13 4.888a1.06 1.06 0 0 0 0 .724C1.914 11.212 4.745 13.25 8 13.25s6.086-2.039 7.129-4.888a1.06 1.06 0 0 0 0-.724c-1.043-2.85-3.874-4.888-7.13-4.888Z"
                        stroke="currentcolor"
                        stroke-linejoin="round"
                        stroke-width="1.5"
                      />
                      <path
                        d="M10.25 8a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Z"
                        stroke="currentcolor"
                        stroke-linejoin="round"
                        stroke-width="1.5"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="css-11u50rl"
          >
            <h4
              class="css-1skdotg"
            >
              Actors
            </h4>
            <div
              class="css-k5cxwk"
            >
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="user"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    User
                  </span>
                </label>
                <span
                  class="css-144dypm"
                >
                  <span
                    aria-hidden="true"
                    class="css-1dbakxj"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-u7v0tx"
                      fill="none"
                      role="presentation"
                      viewBox="-4 -4 24 24"
                    >
                      <path
                        d="M13.25 15v-2.25a3 3 0 0 0-3-3h-4.5a3 3 0 0 0-3 3V15m8.5-11a3.25 3.25 0 1 1-6.5 0 3.25 3.25 0 0 1 6.5 0Z"
                        stroke="currentcolor"
                        stroke-linejoin="round"
                        stroke-width="1.5"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="automation"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Automation
                  </span>
                </label>
                <span
                  class="css-144dypm"
                >
                  <span
                    aria-hidden="true"
                    class="css-1dbakxj"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-u7v0tx"
                      fill="none"
                      role="presentation"
                      viewBox="-4 -4 24 24"
                    >
                      <path
                        d="m6 15.25-.723-.2a.75.75 0 0 0 1.253.73zM13.25 8l.53.53a.75.75 0 0 0-.53-1.28zM10 .75l.723.2A.75.75 0 0 0 9.47.22zM2.75 8l-.53-.53a.75.75 0 0 0 .53 1.28zm3.78 7.78 7.25-7.25-1.06-1.06-7.25 7.25zm6.72-8.53H8v1.5h5.25zm-4.527.95 2-7.25-1.446-.4-2 7.25zM9.47.22 2.22 7.47l1.06 1.06 7.25-7.25zM2.75 8.75H8v-1.5H2.75zm4.527-.95-2 7.25 1.446.4 2-7.25z"
                        fill="currentcolor"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="css-11u50rl"
          >
            <h4
              class="css-1skdotg"
            >
              Read State
            </h4>
            <div
              class="css-k5cxwk"
            >
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="unread"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Unread
                  </span>
                </label>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="read"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Read
                  </span>
                </label>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1npayr"
        >
          <div
            class="css-11u50rl"
          >
            <h4
              class="css-1skdotg"
            >
              Products
            </h4>
            <div
              class="css-k5cxwk"
            >
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="bitbucket"
                    checked=""
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                      <path
                        d="M9.707 11.293a1 1 0 1 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 1 0-1.414-1.414L11 12.586l-1.293-1.293z"
                        fill="inherit"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Bitbucket
                  </span>
                </label>
                <span
                  aria-label="Bitbucket"
                  class="css-5vjqu0"
                  role="img"
                  style="--logo-color: inherit; --logo-fill: currentColor;"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
      
                    <path
                      d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                      fill="#1868DB"
                    />
                    
    
                  </svg>
                </span>
                <span
                  class="css-g73hg0"
                >
                  <span
                    class="css-pvol9p"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="compass"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Compass
                  </span>
                </label>
                <span
                  aria-label="Compass"
                  class="css-5vjqu0"
                  role="img"
                  style="--logo-color: inherit; --logo-fill: currentColor;"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
      
                    <path
                      d="M15.667 15.66v5.942H9.713V15.66zV9.722H4.807c-.58.004-1.047.47-1.043 1.04v15.755a1.04 1.04 0 0 0 1.028 1.054h15.771a1.04 1.04 0 0 0 1.042-1.04V15.66zm0-11.88v5.942h5.967v5.938h5.935V4.82a1.04 1.04 0 0 0-1.028-1.053h-.014z"
                      fill="#6C6F77"
                    />
                    
      
                  </svg>
                  
    
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="confluence"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Confluence
                  </span>
                </label>
                <span
                  aria-label="Confluence"
                  class="css-5vjqu0"
                  role="img"
                  style="--logo-color: inherit; --logo-fill: currentColor;"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
      
                    <path
                      d="M25.769 20.234c-6.584-3.183-8.507-3.66-11.282-3.66-3.254 0-6.028 1.355-8.507 5.16l-.406.622c-.333.513-.407.696-.407.915s.11.403.517.659l4.18 2.598c.222.146.407.22.592.22.222 0 .37-.11.592-.44l.665-1.024c1.036-1.574 1.96-2.086 3.144-2.086 1.036 0 2.257.293 3.773 1.025l4.365 2.049c.443.22.924.11 1.146-.403l2.071-4.537c.222-.512.074-.842-.444-1.098M6.572 12.22c6.584 3.184 8.507 3.66 11.281 3.66 3.255 0 6.03-1.354 8.507-5.16l.407-.622c.333-.512.407-.695.407-.915s-.11-.402-.518-.658l-4.18-2.598c-.221-.147-.406-.22-.591-.22-.222 0-.37.11-.592.44l-.666 1.024c-1.035 1.573-1.96 2.086-3.144 2.086-1.035 0-2.256-.293-3.772-1.025L9.346 6.183c-.444-.22-.924-.11-1.146.402l-2.072 4.538c-.222.512-.074.841.444 1.098"
                      fill="#6C6F77"
                    />
                    
    
                  </svg>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="jira"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Jira
                  </span>
                </label>
                <span
                  aria-label="Jira"
                  class="css-5vjqu0"
                  role="img"
                  style="--logo-color: inherit; --logo-fill: currentColor;"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
      
                    <path
                      d="M11.034 21.99h-2.22c-3.346 0-5.747-2.05-5.747-5.052h11.932c.619 0 1.019.44 1.019 1.062v12.007c-2.983 0-4.984-2.416-4.984-5.784zm5.893-5.967h-2.219c-3.347 0-5.748-2.013-5.748-5.015h11.933c.618 0 1.055.402 1.055 1.025V24.04c-2.983 0-5.02-2.416-5.02-5.784zm5.93-5.93h-2.219c-3.347 0-5.748-2.05-5.748-5.052h11.933c.618 0 1.018.439 1.018 1.025v12.007c-2.983 0-4.984-2.416-4.984-5.784z"
                      fill="#6C6F77"
                    />
                    
    
                  </svg>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="jira product discovery"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Jira Product Discovery
                  </span>
                </label>
                <span
                  aria-label="Jira Product Discovery"
                  class="css-5vjqu0"
                  role="img"
                  style="--logo-color: inherit; --logo-fill: currentColor;"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
      
                    <path
                      d="M17.655 5.884a15.3 15.3 0 0 0 8.75 0c.257-.056.428.114.37.37-.826 2.985-.826 5.742 0 8.727.058.228-.113.427-.37.342a16.33 16.33 0 0 0-8.75 0c-.228.085-.428-.114-.342-.342.77-2.985.77-5.742 0-8.727-.086-.256.114-.426.342-.37m1.169 10.576v.483c0 2.246-1.568 3.894-3.506 3.894a3.474 3.474 0 0 1-3.477-3.496c0-1.933 1.567-3.468 3.762-3.468h.57V7.078c-.285-.028-.57-.028-.855-.028C9.618 7.05 5 11.655 5 17.37c0 5.713 4.617 10.29 10.318 10.29s10.346-4.605 10.346-10.29v-.91z"
                      fill="#6C6F77"
                    />
                    
    
                  </svg>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="jira service management"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Jira Service Management
                  </span>
                </label>
                <span
                  aria-label="Jira Service Management"
                  class="css-5vjqu0"
                  role="img"
                  style="--logo-color: inherit; --logo-fill: currentColor;"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
      
                    <path
                      d="M18.79 13.257h7.325c1.1 0 1.476 1.046.805 1.878L15.464 29.274c-3.702-2.951-3.353-7.62-.644-11.027zm-5.66 5.634H5.806c-1.1 0-1.476-1.046-.805-1.878L16.457 2.874c3.702 2.951 3.3 7.566.617 11z"
                      fill="#6C6F77"
                    />
                    
    
                  </svg>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="team central (atlas)"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Team Central (Atlas)
                  </span>
                </label>
                <span
                  aria-label="Atlas"
                  class="css-5vjqu0"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
    
                    <g
                      fill="#6C6F77"
                    >
                      
      
                      <path
                        d="M16 28.532c-6.656 0-12.068-5.412-12.068-12.068S9.344 4.396 16 4.396v1.921c-5.597 0-10.146 4.549-10.146 10.146S10.403 26.609 16 26.609zm0 0v-1.921c5.597 0 10.146-4.549 10.146-10.146h1.921c0 6.656-5.412 12.068-12.068 12.068zm12.068-12.068h-1.921c0-5.597-4.549-10.146-10.146-10.146V4.397c6.656 0 12.068 5.412 12.068 12.068zm-6.928 3.695c-1.28-.251-2.292-.706-3.973-1.467-.464-.204-.974-.436-1.559-.696a59 59 0 0 0-1.003-.436c-2.534-1.123-3.926-1.736-5.634-1.736-1.198 0-2.098.325-2.6.937a1.72 1.72 0 0 0-.38 1.448l-1.885.362a3.67 3.67 0 0 1 .78-3.035c.613-.743 1.82-1.634 4.085-1.634 2.116 0 3.824.761 6.414 1.903.316.14.641.288.994.436.594.26 1.114.492 1.578.706 1.606.724 2.488 1.123 3.555 1.327l-.371 1.885Zm1.877.185c-.64 0-1.253-.056-1.875-.185l.371-1.885c.502.102.994.149 1.504.149 1.188 0 2.089-.298 2.609-.864s.539-1.253.51-1.615l1.913-.167c.102 1.169-.251 2.265-1.003 3.082-.622.677-1.82 1.485-4.029 1.485M16 28.532v-1.921c2.757 0 4.4-2.813 4.4-7.52s-1.67-8.652-5.096-12.3l1.402-1.318c3.778 4.02 5.616 8.476 5.616 13.618 0 5.821-2.423 9.441-6.322 9.441m-.001 0c-4.15 0-6.526-3.379-6.526-9.273 0-6.879 3.008-10.722 5.82-13.776l1.412 1.299c-3.277 3.565-5.31 6.888-5.31 12.476 0 6.08 2.506 7.352 4.604 7.352z"
                      />
                      
      
                      <path
                        d="M10.857 17.467a2.247 2.247 0 1 0 0-4.494 2.247 2.247 0 0 0 0 4.494m10.385 3.871a2.247 2.247 0 1 0 0-4.494 2.247 2.247 0 0 0 0 4.494M15.998 7.96a2.247 2.247 0 1 0 0-4.493 2.247 2.247 0 0 0 0 4.494Z"
                      />
                      
    
                    </g>
                    
  
                  </svg>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="trello"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Trello
                  </span>
                </label>
                <span
                  aria-label="Trello"
                  class="css-5vjqu0"
                  role="img"
                  style="--logo-color: inherit; --logo-fill: currentColor;"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
      
                    <path
                      clip-rule="evenodd"
                      d="M24.286 5.337H7.714a2.585 2.585 0 0 0-2.585 2.585v16.572a2.585 2.585 0 0 0 2.585 2.584h16.572a2.585 2.585 0 0 0 2.585-2.584V7.922a2.585 2.585 0 0 0-2.585-2.585m-9.791 15.66a.86.86 0 0 1-.859.858h-3.634a.86.86 0 0 1-.859-.859V10.21a.86.86 0 0 1 .859-.86h3.634a.86.86 0 0 1 .859.86zm8.362-4.953a.86.86 0 0 1-.859.859h-3.634a.86.86 0 0 1-.859-.859V10.21a.86.86 0 0 1 .859-.86h3.634a.86.86 0 0 1 .859.86z"
                      fill="#6C6F77"
                      fill-rule="evenodd"
                    />
                    
    
                  </svg>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="css-bsfd3j"
              >
                <label
                  class="css-k8x29e"
                >
                  <input
                    aria-label="unknown"
                    class="css-f3myyk"
                    tabindex="0"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    class="css-1dr55qw"
                    role="presentation"
                    style="fill: var(--checkbox-tick-color);"
                    viewBox="0 0 24 24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <rect
                        fill="currentColor"
                        height="12"
                        rx="2"
                        width="12"
                        x="6"
                        y="6"
                      />
                    </g>
                  </svg>
                  <span
                    class="css-1odt9zb"
                  >
                    Unknown
                  </span>
                </label>
                <span
                  aria-label="Atlassian"
                  class="css-5vjqu0"
                  role="img"
                  style="--logo-color: inherit; --logo-fill: currentColor;"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
      
                    <path
                      d="M27.545 24.378 16.96 3.208c-.208-.458-.417-.541-.667-.541-.208 0-.458.083-.708.5-1.5 2.375-2.167 5.125-2.167 8 0 4.001 2.042 7.752 5.042 13.795.334.666.584.791 1.167.791h7.335c.541 0 .833-.208.833-.625 0-.208-.042-.333-.25-.75M12.168 14.377c-.834-1.25-1.084-1.334-1.292-1.334s-.333.083-.708.834L4.875 24.46c-.167.334-.208.459-.208.625 0 .334.291.667.916.667h7.46c.5 0 .875-.416 1.083-1.208.25-1 .334-1.876.334-2.917 0-2.917-1.292-5.751-2.292-7.251"
                      fill="#6C6F77"
                    />
                    
    
                  </svg>
                </span>
                <span
                  class="css-1wkl091"
                >
                  <span
                    class="css-f9etm4"
                  >
                    0
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="css-156yo0n"
  >
    <div
      class="css-hugz22"
    >
      <button
        class="css-18yzeap"
        data-testid="filters-clear"
        title="Clear Filters"
        type="button"
      >
        <span
          class="css-1nqby2s"
        >
          Clear Filters
        </span>
      </button>
    </div>
  </div>
</div>
`;
